Fix safari img stretching

--- a/public/global.css
+++ b/public/global.css
@@ -56,6 +56,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: flex-start;
   }
   
   .card {
